[gd_scene load_steps=3 format=2]

[ext_resource path="res://main/level.gd" type="Script" id=1]
[ext_resource path="res://cyborg/cyborg.tscn" type="PackedScene" id=2]

[node name="main" type="Node"]

script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="cyborg_list" type="HBoxContainer" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 173.0
margin_right = 1024.0
margin_bottom = 423.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1

[node name="cyborg" parent="VBoxContainer/cyborg_list" index="0" instance=ExtResource( 2 )]

margin_left = 387.0
margin_right = 637.0
margin_bottom = 250.0

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 427.0
margin_right = 1024.0
margin_bottom = 427.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="mission_list" type="HBoxContainer" parent="VBoxContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 512.0
margin_right = 512.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="mission_timer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = true


