extends Node

const CYBORG_LIST = "cyborg_list"
const MISSION_LIST = "mission_list"
const MISSION_TIMER = "mission_timer"

var credits = 0
var mission_packed_scene = preload("res://mission/mission.tscn")


var nodes = {
	CYBORG_LIST: null,
	MISSION_LIST: null,
	MISSION_TIMER: null,
}

const MISSION_ROLL_TYPE = "mission_roll_type"
const MISSION_ROLL_DESC = "mission_roll_desc"

var mission_roll = [
	{   
		MISSION_ROLL_TYPE: mb_lib.MISSION_ATTACK,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_DEFEND,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_ESCORT,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_AMBUSH,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_SURVEILLANCE,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_COUNTER_INTELLIGENCE,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_ASSASINATE,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_BODYGUARD,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_GUARD,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_INFILTRATE,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_SEARCH_AND_DESTROY,
		MISSION_ROLL_DESC: "Test Description",
	},
	{
		MISSION_ROLL_TYPE: mb_lib.MISSION_CONSTRUCT_OUTPOSTS,
		MISSION_ROLL_DESC: "Test Description",
	},
]
var next_mission = 0

func _ready():
	for node_name in nodes:
		nodes[node_name] = find_node(node_name)
	
	nodes[MISSION_TIMER].connect("timeout", self, "mission_timer_timeout")

func new_mission():
	var new_mission = mission_packed_scene.instance()
	var next_mission_info = mission_roll[next_mission]
	nodes[MISSION_LIST].add_child(new_mission)
	new_mission.set_info(next_mission_info[MISSION_ROLL_TYPE], next_mission_info[MISSION_ROLL_DESC])
	next_mission += 1

func mission_timer_timeout():
	new_mission()


